--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -1,7 +1,8 @@
 .form {
-  margin: 30px 0;
-  padding: 30px 15px;
+  margin: 30px;
+  padding: 20px;
   background-color: #d8ffe3;
-  border-radius: 30px;
-  box-shadow: 0 2px 2px 2px rgb(190, 157, 157);
+  border-radius: 15px;
+  box-shadow: 4px 4px 4px rgba(24, 23, 23, 0.703);
+  max-width: 476px;
 }
