--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,4 +1,16 @@
 .productName {
-  background-color: #efefef;
-  margin: 2px 0;
+  margin: 5px 0;
+  font-weight: 500;
+  text-align: center;
+  border: solid 1px black;
+}
+
+.priceStock {
+  background-color: royalblue;
+  color: white;
+  font-size: medium;
+  font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5px;
 }
