--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,19 @@
-html,
-body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+  line-height: 160%;
   background-color: #efefef;
+}
+
+* {
+  box-sizing: inherit;
 }
 
 a {
   color: inherit;
   /* text-decoration: none; */
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
 }
