--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,6 +1,8 @@
+@import "./partials/colors.scss";
+
 .footer {
-  background-color: #000;
-  color: #fff;
+  background-color: $footerBackgroundColor;
+  color: $footerTextColor;
   width: 100%;
   height: 5vh;
   position: fixed;
