--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import "./partials/colors.scss";
+
 body,
 html {
   margin: 0;
@@ -6,7 +8,7 @@ html {
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
   line-height: 160%;
-  background-color: #efefef;
+  background-color: $appBackgroundColor;
 }
 
 * {
